--- a/main.html
+++ b/main.html
@@ -9,7 +9,11 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="hero">
-		<img src=""
+		<img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imag">
+		<div class="subsection">
+		<h1>Welcome to my Pinterest clone</h1>
+		<p>asdf dfgh ghjk jklj asdf dfgh ghjk hjkl</p>
+		<button type="button">Explore now</button></div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
